--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
+/*----------------------- NAV --------------------------*/
+
 nav {
-    background-color: #fab696;
+    /* background-color: #fab696; */
+    background-color: #ffe75e;
     text-align: center;
+}
+
+body {
+    font-family: 'Pacifico';
+}
+
+/*----------------------- MAIN DIV --------------------------*/
+
+.tabela {
+    /* background-color: #f7c5a8; */
+    background-color: #deff8b;
 }
 
 .container {
@@ -10,32 +24,26 @@ nav {
 }
 
 .row {
-    font-family: 'Simonetta';
+    /* font-family: 'Simonetta'; */
     font-size: 18px;
 }
 
-.tabela {
-    background-color: #f7c5a8;
+.img {
+    width: 2rem;
+    margin-left: 15px;
 }
+
 
 .input-field, .add-button {
     width: 550px;
     margin-top: 10px;
+    text-align: center;
 }
+
 
 .input-field-short, .remove-button {
     width: auto;
     margin-top: 10px;
-}
-
-.price {
-    margin-top: 30px;
-    padding: 20px 10px;
-    background-color: #fab696;
-    font-family: 'Caveat';
-    font-size: 20px;
-    font-style: bold;
-
 }
 
 .remove-button, .add-button {
@@ -43,11 +51,36 @@ nav {
     border: 1px solid black;
 }
 
+
+#input {
+    /* background-color: transparent; */
+    background-color: #e6ff8b;
+}
+
 .budget {
     margin-top: 3rem;
-    font-family: 'Caveat';
+    /* font-family: 'Caveat'; */
 }
+
+/*----------------------- PRICE DIV --------------------------*/
+
+.price {
+    margin-top: 30px;
+    padding: 20px 10px;
+    /* background-color: #fab696; */
+    background-color: #8cba51;
+    /* font-family: 'Caveat'; */
+    font-size: 20px;
+    font-style: bold;
+}
+
 
 .col-8 {
     text-align: center;
 }
+
+
+
+
+
+
